js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-labeled-typeof-import-call-source-property.js
DONOTEVALUATE
(
)
;
label
:
{
typeof
import
.
source
.
UNKNOWN
;
}
;
